fix z-index

--- a/styles/03-sort-mobile.css
+++ b/styles/03-sort-mobile.css
@@ -79,14 +79,14 @@
 
     .filter-choice {
         position: absolute;
-        right: -170%;
+        right: 0;
         top: 2em;
         width: 425px;
         padding: 20px 20px 12px;
         background-color: white;
         border: 1px solid #D4E0E7;
         filter: drop-shadow(0px 4px 12px rgba(90, 96, 99, 0.3));
-        z-index: 10;
+        z-index: 5;
     }
 
     .filter-list-item {
